# StrangeEngine

./: CMakeLists.txt  README.md
res/fonts.dat/: Font_properties
res/scenes.dat/: main.s
res/shaders.dat/: basic.frag  basic.vert  light.frag  light.vert  text.frag  text.vert  texture.frag  texture.vert
src/: constants.h  main.cpp
src/animation/: AnimatedSprite.cpp  AnimatedSprite.h  Animator.cpp  Animator.h
src/audio/: Audio.cpp  Audio.h
src/engine/: Engine.cpp  Engine.h  HardwareInfo.cpp  HardwareInfo.h  Logger.cpp  Logger.h
src/events/: Events.cpp  Events.h
src/game/: Game.cpp  Game.h
src/game/collisionKit/: CollisionKit.cpp  CollisionKit.h  HitBoxes.cpp  HitBoxes.h
src/game/gameObjects/: GameObject.h
src/game/gameObjects/entities/: Entity.cpp  Entity.h
src/game/gameObjects/objects/: Object.cpp  Object.h
src/game/gameObjects/player/: Camera.cpp  Camera.h  Player.cpp  Player.h
src/graphics/: Colors.h  ShaderManager.cpp  ShaderManager.h  ShaderProgram.cpp  ShaderProgram.h  Texture.cpp  Texture.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h  VFX.cpp  VFX.h
src/include/: ImGui_include.h  OpenGL_include.h  SDL_image_include.h  SDL_include.h  SDL_mixer_include.h  SDL_ttf_include.h
src/managers/: AnimManager.cpp  AnimManager.h  EntityManager.cpp  EntityManager.h  ObjectManager.cpp  ObjectManager.h  PlayerManager.h
src/physics/: Physics.cpp  Physics.h
src/platform/ios/: ios_file_system.h  ios_file_system.mm  ios_preloader.h  ios_preloader.mm  ios_resource_manager.h  ios_resource_manager.mm
src/preloader/: Preloader.cpp  Preloader.h
src/renderer/: ConfiguredSprite.cpp  ConfiguredSprite.h  Renderer.cpp  Renderer.h
src/resourceManager/: ResourceManager.cpp  ResourceManager.h
src/scene/: Scene.cpp  Scene.h
src/scriptRegistry/: ScriptRegistry.cpp  ScriptRegistry.h
src/scripts/: devscripts.cpp  devscripts.h  script.cpp  scripts.h
src/text/: Text.cpp  Text.h
src/tilemap/: BlockTilemap.cpp  BlockTilemap.h  Tilemap.cpp  Tilemap.h  TilemapLayer.cpp  TilemapLayer.h
src/timer/: Timer.cpp  Timer.h
src/ui/: UI.cpp  UI.h
src/ui/textBox/: TextBox.cpp  TextBox.h
src/utils/Vector2D/: Vector2D.h
src/utils/loaders/: load_dialog.cpp  load_dialog.h  load_file.cpp  load_file.h
src/window/: Window.cpp  Window.h
